# hermos-optimization-layer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTIVE_PROFILE.md  APL_V0_1_VALIDATION.md  ARCHITECTURE.md  CROSS_AGENT_ADAPTERS.md  CROSS_AGENT_VALIDATION.md  NODE_HANDOFFS.md  PRIVACY_BOUNDARY.md  REAL_MODEL_EXPERIMENT.md  UPSTREAM_COMPATIBILITY.md
examples/: __init__.py  domain_rules.py  real_model_ab_demo.py
integrations/hermos_sandbox/: README.md  adapter.py  run_adapter_tests.py  test_adapter.py
integrations/openclaw-adaptive-profile/: index.js  openclaw.plugin.json  package.json
schemas/: host-turn.schema.json  observation.schema.json
skills/adaptive-profile/: SKILL.md
src/hermos/: __init__.py
src/hermos/adaptive_profile/: __init__.py  cli.py  engine.py  host.py  mcp.py  models.py  observations.py  prompt.py  questionnaire.py  scheduler.py  storage.py
src/hermos/core/: __init__.py  agents.py  boundary.py  context_filter.py  memory.py  models.py  orchestrator.py  query_analyzer.py  self_model.py
src/hermos/runtime_closed_loop/: __init__.py  context.py  detectors.py  events.py  evidence.py  gate.py  layer.py  policy.py  state.py  version.py
tests/: test_adaptive_profile.py  test_adaptive_profile_host.py  test_adaptive_profile_mcp.py  test_architecture.py  test_openclaw_adapter.py  test_query_analyzer.py  test_real_model_ab_demo.py  test_runtime_closed_loop.py
